--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-__*/
-DS*
-DS*/
-.DS_*
+# Python
+__pycache__/
+*.pyc
+.env
 
+# Virtual environment
+venv/
+.env/
+
+# OS
+.DS_Store
+
+# VS Code
+.vscode/
