--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask
-Flask_Cors
+flask
+flask-cors
+python-dotenv
 torch
-torchvision
-torchaudio
 transformers
+accelerate
+gunicorn
+sentence-transformers
